--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbershop</title>
+    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Roboto', sans-serif; }
-        h1, h2, h3 { font-family: 'Playfair Display', serif; }
-        .navbar { margin-bottom: 20px; }
-        .card { margin-bottom: 20px; }
-        .confirmation { padding: 20px; background-color: #f8f9fa; border-radius: 5px; }
+        body { 
+            font-family: 'Roboto', sans-serif; 
+        }
+        h1, h2, h3 { 
+            font-family: 'Playfair Display', serif; 
+        }
+        .navbar { 
+            margin-bottom: 20px; 
+        }
+        .card { 
+            margin-bottom: 20px; 
+        }
+        .confirmation { 
+            padding: 20px; 
+            background-color: #f8f9fa; 
+            border-radius: 5px; 
+        }
     </style>
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="70">
 
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbar">
         <a class="navbar-brand" href="#">Barbershop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,11 +46,13 @@
         </div>
     </nav>
 
+    <!-- Header Section -->
     <header class="container text-center my-5">
         <h1>Welcome to Our Barbershop</h1>
         <p class="lead">Classic Cuts & Modern Styles</p>
     </header>
 
+    <!-- Services Section -->
     <section id="services" class="container">
         <h2 class="text-center">Our Services</h2>
         <div class="row">
@@ -57,6 +74,7 @@
         </div>
     </section>
 
+    <!-- Barbers Section -->
     <section id="barbers" class="container">
         <h2 class="text-center">Meet Our Barbers</h2>
         <input type="text" id="searchBarber" class="form-control mb-3" placeholder="Search for a barber...">
@@ -76,6 +94,7 @@
         </div>
     </section>
 
+    <!-- Booking Section -->
     <section id="booking" class="container">
         <h2 class="text-center">Book an Appointment</h2>
         <form>
@@ -114,6 +133,7 @@
         </form>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact" class="container">
         <h2 class="text-center">Contact Us</h2>
         <p class="text-center">Address: 123 Main Street, City, State</p>
@@ -122,6 +142,7 @@
         <div id="map" class="my-3"></div>
     </section>
 
+    <!-- Booking Confirmation Section -->
     <div id="confirmation" class="container text-center my-5 confirmation" style="display:none;">
         <h2>Booking Confirmed!</h2>
         <p>Thank you for booking with [Barbershop Name].</p>
@@ -130,6 +151,7 @@
         <p>See you soon!</p>
     </div>
 
+    <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
